--- a/act46/googlestyle.css
+++ b/act46/googlestyle.css
@@ -92,22 +92,21 @@ input:hover, input:active{
   border: solid 1px #dfdfdf;
   margin-top: 30px;
   padding-top: 15px;
-  margin-bottom: 0;
   padding-bottom: 15px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
 
 }
 
 .footer{
   background-color: #f2f2f2;
   border: solid 1px #dfdfdf;
+  
+  padding-top: 10px;
   margin-bottom: 0;
   padding-bottom: 15px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
 
 }
 
