--- a/act46/googlestyle.css
+++ b/act46/googlestyle.css
@@ -92,9 +92,11 @@ input:hover, input:active{
   border: solid 1px #dfdfdf;
   margin-top: 30px;
   padding-top: 15px;
+  margin-bottom: 0;
   padding-bottom: 15px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 
 }
 
@@ -102,15 +104,16 @@ input:hover, input:active{
   background-color: #f2f2f2;
   border: solid 1px #dfdfdf;
   
-  padding-top: 10px;
+  padding-top: 15px;
   margin-bottom: 0;
   padding-bottom: 15px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 
 }
 
-.footer a,.footer1 a{
+.footer a,footer1 a{
   margin: 20px;
 }
 .footer a:active{
