--- a/act46/googlestyle.css
+++ b/act46/googlestyle.css
@@ -1,64 +1,57 @@
-*{
+* {
   box-sizing: border-box;
 }
 
-.main{
+.main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
-
 }
-body{
+body {
   color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 13px;
   margin: 0;
-  
 }
 
 a {
   text-decoration: none;
   color: #666;
 }
-a:hover{
+a:hover {
   text-decoration: underline;
 }
 
-.nav-bar{
+.nav-bar {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   margin-right: 30px;
-   margin-top: 14px;
-  
-    
+  margin-top: 14px;
 }
-.nav-bar span{
+.nav-bar span {
   margin: 0 10px;
-  
 }
-.nav-bar img{
-
-   margin: 0 10px;
-    position: absolute;
+.nav-bar img {
+  margin: 0 10px;
+  position: absolute;
   top: 10px;
-right: 104px;
- height: 40px;
-    width: 40px;
+  right: 104px;
+  height: 40px;
+  width: 40px;
 }
 
-
-.search{
+.search {
   display: flex;
   flex-direction: column;
   align-items: center;
   color: #757575;
   font-weight: bold;
-  margin-top: 89px;
+  margin-top: 40px;
 }
 
-input{
+input {
   height: 42px;
   border-top: 1px solid #efefef;
   border-left: 1px solid #efefef;
@@ -67,19 +60,21 @@ input{
   padding: 10px;
   box-shadow: 0 1px 2px grey;
   margin: 36px 0;
-  width: 428px;
+  width: 478px;
+  border-radius: 16px;
 }
-input:hover, input:active{
+input:hover,
+input:active {
   box-shadow: 0 1px 4px grey;
 }
-.search span a{
+.search span a {
   background-color: #f2f2f2;
   text-align: center;
   margin: 5px;
   padding: 10px;
-  border-radius: 2px
+  border-radius: 2px;
 }
-.search span a:hover{
+.search span a:hover {
   text-decoration: none;
   font-weight: bold;
   color: black;
@@ -87,38 +82,34 @@ input:hover, input:active{
   margin: 4px;
   padding: 10px;
 }
-.footer{
+.footer {
   background-color: #f2f2f2;
   border: solid 1px #dfdfdf;
-  
+
   padding-top: 15px;
   margin-bottom: 0;
   padding-bottom: 15px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
 }
 
-.footer a{
+.footer a {
   margin: 20px;
 }
-.footer a:active{
+.footer a:active {
   color: tomato;
 }
 
-
-.left{
- 
+.left {
   padding-left: 27px;
 }
 
-.right{
- 
+.right {
   padding-right: 27px;
 }
 
-.btn{
+.btn {
   display: inline-flex;
   border-radius: 6px;
   background-color: #4285f4;
@@ -126,8 +117,7 @@ input:hover, input:active{
   padding: 10px;
   text-align: center;
 }
-.btn a{
+.btn a {
   color: white;
   text-decoration: none;
 }
-
