--- a/act46/googlestyle.css
+++ b/act46/googlestyle.css
@@ -85,13 +85,21 @@ input:active {
 .footer {
   background-color: #f2f2f2;
   border: solid 1px #dfdfdf;
-
   padding-top: 15px;
   margin-bottom: 0;
   padding-bottom: 15px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.language{ 
+  margin: auto; 
+}
+.language span1 a{
+  color: black;
+}
+.language span a{
+  color: blue;
 }
 
 .footer a {
