--- a/act46/googlestyle.css
+++ b/act46/googlestyle.css
@@ -48,6 +48,7 @@ a:hover {
   align-items: center;
   color: #757575;
   font-weight: bold;
+margin-top: 200px;
   
 }
 
@@ -62,9 +63,9 @@ input {
   margin: 36px 0;
   width: 478px;
   border-radius: 16px;
+  
 }
-input:hover,
-input:active {
+input:hover,input:active {
   box-shadow: 0 1px 4px grey;
 }
 .search span a {
@@ -73,6 +74,7 @@ input:active {
   margin: 5px;
   padding: 10px;
   border-radius: 2px;
+  
 }
 .search span a:hover {
   text-decoration: none;
@@ -94,6 +96,7 @@ input:active {
 }
 .language{ 
   margin: auto; 
+  margin-top: 30px;
 }
 .language span1 a{
   color: black;
