--- a/exam/part2a/receipt_input_form.css
+++ b/exam/part2a/receipt_input_form.css
@@ -143,16 +143,12 @@ input[type=text],input[type=email]{
  
 }
 
-p2{
+p2,p3{
   position: relative;
-  left: 86px;
+  left: 94px;
   
 }
-p3{
-  position: relative;
-  left: 86px;
-       
-}
+
 
 
 button {
