--- a/exam/part2b/portfolio.css
+++ b/exam/part2b/portfolio.css
@@ -1,1 +1,173 @@
 
+body{
+ 
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.8rem; 
+  font-weight: 400;
+  line-height: 1.4;
+}
+body{
+ background-image: url("https://lcamile.github.io/Camile_WebDev_Midterm/exam/part2b/background1.png");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+:root {
+  
+  --main-gray: white;
+}
+.img-box {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 480px;
+  height: 436px;
+}
+*,
+*::before,
+*::after {
+    margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+  font-family: "Lucida Console", Courier, monospace;
+}
+
+html {
+  box-sizing: border-box;
+
+
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+@media (max-width: 75em) {
+  html {
+    font-size: 60%;
+  }
+}
+
+h1, h2 {
+  font-weight: 700;
+  text-align: center;
+  color: white;
+ margin-top: 8rem;
+}
+
+.intro > p {
+  font-size: 2rem;
+  font-weight: 100;
+  font-style: italic;
+  color: white;
+  text-align: center;
+}
+
+h1 {
+  font-size: 6rem;
+}
+
+h2 {
+  font-size: 2.2rem;
+}
+a {
+  text-decoration: none;
+  color: var(--main-white);
+}
+
+
+
+
+
+html {
+  box-sizing: border-box;
+
+
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+.projects-section {
+  text-align: center;
+  padding: 10rem 2rem;
+}
+
+.projects-section-header {
+  max-width: 640px;
+  margin: 0 auto 6rem auto;
+ 
+}
+
+
+
+/* "Automagic" image grid using no media queries */
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 4rem;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  
+}
+
+
+.project {
+  background: var(--main-gray);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 2px;
+  
+}
+
+.code {
+  color: var(--main-gray);
+  transition: color 0.3s ease-out;
+  
+}
+
+.project:hover  {
+  color: grey;
+}
+
+
+
+.project-title {
+  font-size: 2rem;
+  padding: 2rem 0.5rem;
+  
+}
+
+footer {
+    border-top: 5px solid white;
+    padding: 26px;
+    background: white;
+  position: absolute; 
+    top: 1326px; 
+       width: 100%;
+  right:0px;
+  
+}
+li {
+    display: inline-block;
+  
+}
+.logo{
+  width: 50px;
+  height: 50px;
+}
+.contact{
+  margin-top: 10rem;
+}
+.contact >p{
+  font-size: 3rem;
+  color: black;
+  padding: 26px;
+}
+.contractbutton>p{
+  padding: 26px;
+  margin-top: 10px;
+  color:grey
+    
+}
